drop the animated background

--- a/static/net.html
+++ b/static/net.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.fog.min.js"></script>
 <body>
   <div id="background"> </div>
@@ -22,7 +22,10 @@ VANTA.FOG({
   lowlightColor: 0x04360c,
   baseColor: 0x0b0b0b
 })
-</script><style>
+</script>
+-->
+
+<style>
 #background {
 height:100vh;
 }
